--- a/Get-lucky.html
+++ b/Get-lucky.html
@@ -19,7 +19,7 @@
     --text-blue:#6e7580;
 
     --gradient-border: 8px;
-    --cookie-nudge: 14px;
+    --cookie-nudge: 14px; /* keeps cookie visually centered */
   }
 
   html,body{height:100%}
@@ -30,6 +30,7 @@
     display:grid; place-items:center;
   }
 
+  /* Red card with thicker green→blue gradient border to the edges */
   .wrap{
     border: var(--gradient-border) solid transparent;
     border-radius:10px;
@@ -53,12 +54,15 @@
   .pulse{ display:inline-block; animation:pulse 1.25s ease-in-out infinite; transform-origin:center; }
   @keyframes pulse{ 0%,100%{transform:scale(1)} 50%{transform:scale(1.06)} }
 
+  /* Stage + caption block with inner padding to keep text off the edges */
   .stageBlock{
     display:grid;
     justify-items:center;
-    gap:6px;
+    gap:6px;                            /* small gap between image and caption */
     margin:0 auto;
     width:min(560px,88vw);
+    padding-inline:12px;                /* ← new gutter so caption never kisses border */
+    box-sizing:border-box;
   }
 
   .stage{
@@ -72,23 +76,30 @@
     transition:transform .08s ease;
   }
   .stage:active{ transform:scale(.99); }
+
   .stage img{
     max-width:100%;
     width:100%;
     height:auto;
     user-select:none;
     filter:drop-shadow(0 6px 18px rgba(0,0,0,.25));
-    transform: translateX(var(--cookie-nudge));
+    transform: translateX(var(--cookie-nudge)); /* keep cookie’s visual centering */
   }
 
+  /* ⬇️ Caption fixes: smaller, centered, balanced wrap, safe max width */
   .caption{
-    font-size:clamp(20px,3.4vw,30px);
     color:var(--gold);
     font-style:italic;
     font-weight:800;
-    margin-top:2px;
+    font-size:clamp(18px,3vw,24px);     /* a touch smaller so it doesn’t crowd */
+    line-height:1.25;
+    text-align:center;
+    text-wrap:balance;                   /* prettier multi-line break (modern browsers) */
+    max-width:92%;                       /* never exceeds the padded block */
+    margin:2px auto 0;
   }
 
+  /* Centered fortune slip modal + larger DATE NOW kept from prior version */
   .overlay{
     position:fixed; inset:0; background:var(--overlay);
     display:none; align-items:center; justify-content:center;
@@ -219,6 +230,7 @@
   const fortuneEl = document.getElementById("fortuneText");
   const closeBtn  = document.getElementById("closeFortune");
 
+  // Preload frames
   const cache = []; let loaded = 0;
   imgs.forEach(src => {
     const im = new Image();
@@ -251,6 +263,7 @@
     frameEl.style.pointerEvents = "none";
   }
 
+  // DATE NOW → secret invite
   closeBtn.addEventListener("click", () => {
     window.location.href = "secret-invite.html";
   });
